--- a/style2.css
+++ b/style2.css
@@ -2,63 +2,18 @@ body {
   background: #555;
 }
 
-.content {
-  max-width: 850px;
-  width: 850px;
-  margin: auto;
-  background: white;
-  padding: 10px 100px 10px 50px;
-}
-
-.top-menu {
-  padding: 0px;
-}
-.top-menu:after {
-  content: "";
-  display: table;
-  clear: both;
-
-}
-.navbar-logo {display: inline-block;}
-.menu-main {
-  list-style: none;
-  margin: 0;
-  float: right;
-}
-.menu-main li {display: inline-block;}
-.menu-main a {
-  text-decoration: none;
-  display: block;
-  position: relative;
-  line-height: 28px;
-  padding-top: 8px;
-  padding-left: 20px;
-  font-size: 18px;
-
-}
-
-#ctable {
-    width: 850px;
-	border: 0px; /* Граница вокруг таблицы */
-    border-spacing: 0px 20px; /* Расстояние между границ */
-
-}
-tr, td{	
-	vertical-align: top;
-	border: 0px; /* Граница вокруг ячеек */
-    padding: 0px 20px 0px 0px; /* Поля в ячейках */
-}
-td.td-wide{	
-	width: 560px;
-}
-
-
-td.td-narrow{
-	width: 270px;
-}
-
-.bonus{
-	width: 1000px;
-	height:209px;
+.bg-1{
+	background: fixed no-repeat center center / cover;
+	background-clip: content-box;
 	background-color: #F0FBE9;
+	height: 100%;
+}
+
+.container-fluid { 
+  width: 1000px !important;
+  padding: 0px 100px 0px 50px; 
+}
+
+.container{
+	padding: 15px 0px 20px 0px; 
 }
