--- a/style2.css
+++ b/style2.css
@@ -14,6 +14,12 @@ body {
 
 }
 
+.a-ins{
+	box-shadow:
+    inset 0 -0.175em white,
+    inset 0 -0.2em currentColor;
+}
+
 .bg-1{
 	background: fixed no-repeat center center / cover;
 	background-clip: content-box;
